Clean up some of the reporting.  Renamed test framework to EUShouldTest.  Renamed asrt to confirm to clearly indicate that this is not the same thing as an assert.  Started documentation.  Create placeholder for oshelper test.

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,8 +2,8 @@ TESTS = test_package_manager.ex
 INTERPRETER = eui
 
 all: test_package_manager
-test_package_manager: test_random_test
+test_package_manager: test_oshelper
 	${INTERPRETER} test_package_manager.ex
-test_random_test:
-	${INTERPRETER} test_package_manager.ex
+test_oshelper:
+	${INTERPRETER} test_oshelper.ex
 
